2006-08-19  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scm/lily.scm (lilypond-all): option read-file-list: substitute
	commandline args with contains, split by \n.

	* scripts/lilypond-book.py (Lilypond_file_snippet.my_system):
	write snippet-names file, call with -dread-file-list. Fixes
	command limitations on 64-bit systems.

	* input/regression/stencil-color-rotation.ly: new file.

	* lily/include/translator.hh (struct Acknowledge_information):
	revert: don't use Protected_scm in global objects, as GUILE can't
	handle gc_unprotect from automated destructors on MacOS X.
 
	* lily/grob.cc (get_print_stencil): use retval.expr() as base for
	color, not the original stencil. Fixes combinations of
	color/transparency/rotation. Backportme.

	* scripts/lilypond-book.py (main): add --formats=eps for
	texinfo/latex.

	* lily/spacing-engraver.cc (stop_translation_timestep): don't
	crash if spacing_ is nonexistent.

2006-08-14  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scripts/lilypond-book.py (output): Remove obsolete(!?)
	\catcode`\@=12 in the LaTeX output.

2006-08-11  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scm/define-music-types.scm (music-descriptions):
	use sustain-event iso. sustain-pedal-event.

2006-08-11  Joe Neeman  <joeneeman@gmail.com>

	* scripts/convert-ly.py: honour the -n command-line switch

2006-08-10  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scm/output-lib.scm (bar-line::calc-glyph-name): add dashed liine
	break specification.

2006-08-10  Joe Neeman  <joeneeman@gmail.com>

	* Documentation/user: convert-ly the user manual

2006-08-09  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* stepmake/aclocal.m4: version check patch (thanks MWD)

	* ly/music-functions-init.ly: robustness. Don't crash if
	currentBarNumber is not a number.

	* VERSION (PATCH_LEVEL): bump.

2006-08-08  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* stepmake/aclocal.m4: better version check; handle fooX.Y
	binaries too.

	* ly/performer-init.ly: instrument name fixup.
